--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,10 @@
 # Sample site navigation bar links
 
-- title: Home
+- title: Posts
   url: /
-# - title: Posts
-#   url: /posts/
-# - title: Categories
-#   url: /categories/
-# - title: Tags
-#   url: /tags/
-# - title: Recipes
-#   url: /recipes/
-# - title: Search
-#   url: /search/
+- title: Data Science
+  url: /data_science/
+- title: About
+  url: /about/
 # - title: External Page
 #   url: https://the-page.com/you-want-to-link-to.html
