--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # Sample site navigation bar links
 
-- title: Posts
-  url: /
+# - title: Posts
+#   url: /
 - title: Data Science
   url: /data_science/
 - title: About
